--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ authors = [ "lakmeer.github.com" ]
 [dependencies]
 libc = "0.2.139"
 midir = "0.9.1"
+rgb = "0.8.35"
 termion = "2.0.1"
+textplots = "0.8.0"
 
