--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 authors = [ "lakmeer.github.com" ]
 
 [dependencies]
+drawille = "0.3.0"
 libc = "0.2.139"
 midir = "0.9.1"
+rand = "0.8.5"
 rgb = "0.8.35"
 termion = "2.0.1"
 textplots = "0.8.0"
